update card background color to white

--- a/move/move.html
+++ b/move/move.html
@@ -45,7 +45,7 @@
 
           .card {
                border-radius: 15px;
-               background: rgba(255, 255, 255, 0.692);
+               background: white;
                box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
                padding: 20px;
                max-width: 500px;
