replace move.html with index.html for updated website redirection

--- a/move/index.html
+++ b/move/index.html
@@ -105,10 +105,10 @@
      <!-- Main Content -->
      <div class="main-content">
           <div class="card text-center">
-               <img src="./logoo.jpg" alt="Website Logo" class="img-fluid rounded mb-3">
+               <img src="./logo.jpg" alt="Website Logo" class="img-fluid rounded mb-3">
                <h1>We’ve Moved!</h1>
-               <p>Our website has a new home at <strong>mynztrip.com</strong>. Click below to visit us!</p>
-               <a href="https://mynztrip.com" class="btn btn-primary">Go to mynztrip.com</a>
+               <p>Our website has a new home at <strong>b2b.mynztrip.com</strong> Click below to visit us!</p>
+               <a href="https://b2b.mynztrip.com" class="btn btn-primary">Go to b2b.mynztrip.com</a>
           </div>
      </div>
 
